[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]
[ext_resource path="res://Sprites/lobby_button_2.png" type="Texture" id=2]
[ext_resource path="res://OperaLyricsSmooth-OOJo.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="Lobby" type="CanvasLayer"]
layer = 10
script = ExtResource( 1 )

[node name="PlayerButtons" type="VBoxContainer" parent="."]
anchor_left = 0.183
anchor_top = 0.142
anchor_right = 0.399
anchor_bottom = 0.449
margin_left = 197.608
margin_top = -0.720001
margin_right = 420.424
margin_bottom = 244.66
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MapGenButton" type="TextureButton" parent="."]
anchor_right = 0.043
anchor_bottom = 0.054
margin_left = 395.367
margin_top = 498.728
margin_right = 643.335
margin_bottom = 495.088
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MapGenButton"]
margin_left = 68.6216
margin_top = 6.0
margin_right = 193.622
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Generate Map
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
margin_left = 395.113
margin_top = 497.895
margin_right = 651.113
margin_bottom = 537.895
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartButton"]
margin_left = 91.4927
margin_top = 9.89664
margin_right = 162.493
margin_bottom = 23.8966
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
